# irrruco

./: .gitignore  CMakeLists.txt  README.md
board/: b3x2.yml  b6x4.yml  gen_boards.sh
calib/: 1_build-calib.sh  2_prepare-calib-jpgs.sh  3_calib-example.sh  4_clean.sh
cmake/: FindAruco.cmake  FindIrrlicht.cmake  FindOpenCV.cmake
src/: CDebugDraw.hpp  CEngine.cpp  CEngine.hpp  CEventReceiver.cpp  CEventReceiver.hpp  CGame.cpp  CGame.hpp  CGameObjectManager.cpp  CGameObjectManager.hpp  CMakeLists.txt  CPhysics.cpp  CPhysics.hpp  GOCamera.cpp  GOCamera.hpp  GOEntity.cpp  GOEntity.hpp  GOEntityController.cpp  GOEntityController.hpp  GOIAController.cpp  GOIAController.hpp  IGameObject.cpp  IGameObject.hpp  IQuadSceneNode.cpp  IQuadSceneNode.h  TSingleton.hpp  aruco_simple.cpp  common.h  main.cpp
